# HomeworkSubmission

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  run.sh
build2/: CMakeCache.txt  Makefile  cmake_install.cmake
bulid/: CMakeCache.txt  Makefile  cmake_install.cmake
includes/: shared_lib.hpp  static_lib.hpp
src/: CMakeLists.txt
src/shared_lib_src/: CMakeLists.txt  Makefile  cmake_install.cmake  shared_lib.cpp
src/static_lib_src/: CMakeLists.txt  Makefile  cmake_install.cmake  static_lib.cpp
test/: CMakeCache.txt  Makefile  cmake_install.cmake
